// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<blockquote
  class="custom-class"
  data-name="yozora-blockquote"
  style="color:orange"
>
  some text1
  <span>
    some text2
  </span>
  <blockquote
    class="yozora-blockquote"
  >
    some text3
  </blockquote>
</blockquote>
`;

exports[`snapshot default 1`] = `
<blockquote
  class="yozora-blockquote"
>
  some text1
  <span>
    some text2
  </span>
</blockquote>
`;
